--- a/index.html
+++ b/index.html
@@ -47,29 +47,38 @@
     </nav>
   </header>
 
-  <!-- Hero section -->
-  <section id="hero" class="hero">
-    <div class="hero-text">
-      <p class="eyebrow">Welcome to DhofarCare</p>
-      <h2>Digital platform for home services and local entrepreneurship in Dhofar.</h2>
-      <p class="desc">
-        We connect families, dorms, offices, and SMEs in Dhofar with trusted local service providers using
-        <b>AI</b>, <b>cloud computing</b>, and <b>VR service previews</b>.
-      </p>
-      <div class="hero-actions">
-        <a href="#booking" class="btn">Book Now</a>
-        <a href="#media" class="btn ghost">Watch Demo</a>
-      </div>
-      <div class="hero-tags">
-        <span>✓ AI-based service matching</span>
-        <span>✓ Cloud-hosted dashboard</span>
-        <span>✓ 24/7 requests</span>
-      </div>
+<!-- HERO SECTION -->
+<section id="hero" class="hero hero-with-video">
+  <div class="hero-text">
+    <p class="eyebrow">Welcome to DhofarCare</p>
+    <h2>On-demand home services for Dhofar – powered by AI, Cloud, and VR.</h2>
+    <p class="desc">
+      Book cleaning, AC maintenance, plumbing, electrical and more. We connect you with verified local providers in Dhofar.
+    </p>
+    <div class="hero-actions">
+      <a href="#booking" class="btn">Book Now</a>
+      <a href="#media" class="btn ghost">Watch Demo</a>
     </div>
-    <div class="hero-media">
-      <img src="assets/platform-3d.png" alt="DhofarCare smart platform" />
+    <div class="hero-tags">
+      <span>✓ Dhofar areas only</span>
+      <span>✓ 24/7 requests</span>
+      <span>✓ AI auto-reply</span>
     </div>
-  </section>
+  </div>
+
+  <!-- VIDEO IN HERO -->
+  <div class="hero-media video-wrapper">
+    <video src="assets/hero-video.mp4"
+           autoplay
+           muted
+           loop
+           playsinline
+           controlslist="nodownload noplaybackrate">
+      Your browser does not support video.
+    </video>
+  </div>
+</section>
+
 
   <!-- About -->
   <section id="about" class="section about">
@@ -165,7 +174,7 @@
     <h3>Interactive media</h3>
     <div class="media-wrap">
       <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Qxz6Gk6pCug"
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=WHXYlEB_QmY&t=222s"
           title="Home maintenance demo" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
