Add video element to hero section in index.html

--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
 </section>
 
 
+  <!-- VIDEO IN HERO -->
+  <div class="hero-media video-wrapper">
+    <video src="assets/hero-video.mp4"
+           autoplay
+           muted
+           loop
+           playsinline
+           controlslist="nodownload noplaybackrate">
+      Your browser does not support video.
+    </video>
+  </div>
+</section>
+
+
   <!-- About -->
   <section id="about" class="section about">
     <h3>About DhofarCare</h3>
